# grainstore

./: .gitignore  Cargo.toml  README.md  SETUP.md
examples/: bench.rs  bench_blocks.rs  bench_build.rs  bench_disclosure.rs  bench_live.rs  bench_p1.rs  bench_planner.rs
server/: Cargo.toml  README.md
server/deploy/: com.grainstore.grainstored.plist  grainstore.service  install.sh
server/src/: lib.rs
src/: block.rs  catalog.rs  cdc.rs  disclosure.rs  embed.rs  engine.rs  error.rs  governance.rs  hlc.rs  keys.rs  kv.rs  lib.rs  materializer.rs  model.rs  planner.rs  query.rs  recovery.rs  truth.rs  wal.rs
src/vector/: brute.rs  hnsw.rs  mod.rs  sharded.rs
tests/: concurrency.rs  disclosure.rs  engine.rs  governance.rs  mvcc_props.rs  p1_pipeline.rs  planner.rs  recovery_props.rs  vector_recall.rs
tests/common/: mod.rs
