[package]
name = "grainstore-server"
version = "0.1.0"
edition = "2021"
description = "Standalone GrainStore deployment: a server daemon (grainstored), a CLI client (grainstore), and an MCP server for agents."

[lib]
name = "gsserver"
path = "src/lib.rs"

[[bin]]
name = "grainstored"
path = "src/bin/grainstored.rs"

[[bin]]
name = "grainstore"
path = "src/bin/grainstore.rs"

[[bin]]
name = "grainstore-mcp"
path = "src/bin/grainstore-mcp.rs"

[dependencies]
grainstore = { path = ".." }
serde_json = "1"
tiny_http = "0.12"
ureq = "2"

[profile.release]
opt-level = 3

# Own workspace root so it stays independent of the dependency-free core crate.
[workspace]
